// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab applies active styling when isActive is true 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
      "paddingBottom": 8,
      "paddingLeft": 0,
      "paddingRight": 0,
      "paddingTop": 8,
      "position": "relative",
    }
  }
>
  <Text
    accessibilityRole="text"
    numberOfLines={1}
    style={
      [
        {
          "color": "#121314",
          "fontFamily": "Geist Bold",
          "fontSize": 16,
          "fontWeight": 400,
          "letterSpacing": 0,
          "lineHeight": 24,
        },
        {
          "opacity": 0,
        },
      ]
    }
  >
    Test Tab
  </Text>
  <Text
    accessibilityRole="text"
    numberOfLines={1}
    style={
      [
        {
          "color": "#121314",
          "fontFamily": "Geist Bold",
          "fontSize": 16,
          "fontWeight": 400,
          "letterSpacing": 0,
          "lineHeight": 24,
        },
        {
          "alignItems": "center",
          "bottom": 0,
          "display": "flex",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  >
    Test Tab
  </Text>
</View>
`;

exports[`Tab applies custom style and textStyle 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
      "paddingBottom": 8,
      "paddingLeft": 0,
      "paddingRight": 0,
      "paddingTop": 8,
      "position": "relative",
    }
  }
>
  <Text
    accessibilityRole="text"
    numberOfLines={1}
    style={
      [
        {
          "color": "#121314",
          "fontFamily": "Geist Bold",
          "fontSize": 16,
          "fontWeight": 400,
          "letterSpacing": 0,
          "lineHeight": 24,
        },
        {
          "opacity": 0,
        },
      ]
    }
  >
    Test Tab
  </Text>
  <Text
    accessibilityRole="text"
    numberOfLines={1}
    style={
      [
        {
          "color": "#686e7d",
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "fontWeight": 400,
          "letterSpacing": 0,
          "lineHeight": 24,
        },
        {
          "alignItems": "center",
          "bottom": 0,
          "display": "flex",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  >
    Test Tab
  </Text>
</View>
`;

exports[`Tab applies inactive styling when isActive is false 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
      "paddingBottom": 8,
      "paddingLeft": 0,
      "paddingRight": 0,
      "paddingTop": 8,
      "position": "relative",
    }
  }
>
  <Text
    accessibilityRole="text"
    numberOfLines={1}
    style={
      [
        {
          "color": "#121314",
          "fontFamily": "Geist Bold",
          "fontSize": 16,
          "fontWeight": 400,
          "letterSpacing": 0,
          "lineHeight": 24,
        },
        {
          "opacity": 0,
        },
      ]
    }
  >
    Test Tab
  </Text>
  <Text
    accessibilityRole="text"
    numberOfLines={1}
    style={
      [
        {
          "color": "#686e7d",
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "fontWeight": 400,
          "letterSpacing": 0,
          "lineHeight": 24,
        },
        {
          "alignItems": "center",
          "bottom": 0,
          "display": "flex",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  >
    Test Tab
  </Text>
</View>
`;

exports[`Tab renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
      "paddingBottom": 8,
      "paddingLeft": 0,
      "paddingRight": 0,
      "paddingTop": 8,
      "position": "relative",
    }
  }
>
  <Text
    accessibilityRole="text"
    numberOfLines={1}
    style={
      [
        {
          "color": "#121314",
          "fontFamily": "Geist Bold",
          "fontSize": 16,
          "fontWeight": 400,
          "letterSpacing": 0,
          "lineHeight": 24,
        },
        {
          "opacity": 0,
        },
      ]
    }
  >
    Test Tab
  </Text>
  <Text
    accessibilityRole="text"
    numberOfLines={1}
    style={
      [
        {
          "color": "#686e7d",
          "fontFamily": "Geist Regular",
          "fontSize": 16,
          "fontWeight": 400,
          "letterSpacing": 0,
          "lineHeight": 24,
        },
        {
          "alignItems": "center",
          "bottom": 0,
          "display": "flex",
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  >
    Test Tab
  </Text>
</View>
`;
